# ghostwriter-os

./: README.md  demo.py  pyproject.toml  test_real_api.py
ghostwriter/: __init__.py  cli.py  composer.py  diff_learner.py  llm.py  memory.py
tests/: test_composer.py  test_diff_learner.py  test_memory.py
